--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,8 +24,7 @@
   <change-notes>
     <![CDATA[
       <ul>
-        <li><b>2.0.0</b> Convert to Gradle-based plugin.</li>
-        <li><b>1.0.0</b> Release 2018.3 and earlier.</li>
+        <li><b>0.0.1</b>Initial Build</li>
       </ul>
     ]]>
   </change-notes>
