--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,7 @@
   <change-notes>
     <![CDATA[
       <ul>
+        <li><b>0.0.2</b>Compilation implemented</li>
         <li><b>0.0.1</b>Initial Build</li>
       </ul>
     ]]>
