--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,7 +10,7 @@
   <name>BlackBoxFunctions</name>
 
   <!-- Indicate this plugin can be loaded in all IntelliJ Platform-based products. -->
-  <depends>com.intellij.modules.platform</depends>
+  <depends>com.intellij.modules.python</depends>
 
   <!-- Text to display as description on Settings | Plugin page -->
   <description>
