--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,7 @@
   <change-notes>
     <![CDATA[
       <ul>
+        <li><b>1.0.1</b> Update target to PyCharm only</li>
         <li><b>1.0.0</b> UI refinements, initial public release</li>
         <li><b>0.0.2</b> Compilation implemented</li>
         <li><b>0.0.1</b> Initial Build</li>
