--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,8 +36,8 @@
   <vendor url="https://edwardsjohnmartin.github.io/people/index.html">EdwardsLab</vendor>
 
   <extensions defaultExtensionNs="com.intellij">
-    <toolWindow id="BlackBoxFunctions" secondary="true" icon="AllIcons.Toolwindows.WebToolWindow" anchor="right"
-                factoryClass="org.intellij.sdk.BlackBoxFunctions.PyTutorWindowFactory"/>
+    <toolWindow id="BlackBoxFunctions" secondary="true" icon="AllIcons.Toolwindows.ToolWindowStructure" anchor="right"
+                factoryClass="org.intellij.sdk.BlackBoxFunctions.BBFWindowFactory"/>
   </extensions>
 
 </idea-plugin>
