--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -22,15 +22,16 @@
     ]]>
   </description>
   <change-notes>
-    <![CDATA[
-      <ul>
-        <li><b>1.0.2</b> Add custom icon</li>
-        <li><b>1.0.1</b> Update target to PyCharm only</li>
-        <li><b>1.0.0</b> UI refinements, initial public release</li>
-        <li><b>0.0.2</b> Compilation implemented</li>
-        <li><b>0.0.1</b> Initial Build</li>
-      </ul>
-    ]]>
+<!--    <![CDATA[-->
+<!--      <ul>-->
+<!--        <li><b>1.0.3</b> Add custom icon</li>-->
+<!--        <li><b>1.0.2</b> Add custom icon</li>-->
+<!--        <li><b>1.0.1</b> Update target to PyCharm only</li>-->
+<!--        <li><b>1.0.0</b> UI refinements, initial public release</li>-->
+<!--        <li><b>0.0.2</b> Compilation implemented</li>-->
+<!--        <li><b>0.0.1</b> Initial Build</li>-->
+<!--      </ul>-->
+<!--    ]]>-->
   </change-notes>
 
   <!-- Text to display as company information on Settings | Plugin page -->
